--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<li><a id="home" href="/index.html">Home</a></li>
 	<li><a id="about" href="/about.html">About</a></li>
 	<li><a id="sandbox" href="/sandbox.html">Sandbox</a></li>
-  <li><a id="Theta" href="/thetamap.html">Theta</a></li>
+  <li><a id="Theta" href="/thetamap/index.html">Theta</a></li>
 </ul>
 
 </label>
