--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <title>404 Not Found</title>
-<body bgcolor="Gray" text="navy">
-<span style="font-size: 120%;">404 Not Found</span>
+<body text="navy">
+<span style="font-size: 120%;">404 Not Found</span><br>
 このページは<a href="https://www.youtube.com/watch?v=Om3MTou2kPg?t=1m13s" target="_blank">夕焼けの中に吸い込まれて消えてった</a>り、まだ準備中だったりという理由で<b>存在しません。</b><br>
 URLが間違っていないか確認したり、頭を冷やして<a href="http://koyomi.f5.si">トップページ</a>へ戻ってみたりしましょう。
