--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<span></span>
 	<span></span>
 </div>
+                <ul>
+		<li><a href="">Home</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Theta</a></li>
+		<li><a href="#"></a></li>
+		</ul>
 <style>
 .cp_hmenuac06 {
 	position: absolute;
