--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<span></span>
 </div>
                 <ul>
-		<li><a href="">Home</a></li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Theta</a></li>
-		<li><a href="#"></a></li>
+		<li><a href="/index.html">Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="/sandbox.html">Sandbox</a></li>
+		<li><a href="/Thetamap">Theta</a></li>
 		</ul>
 <style>
 .cp_hmenuac06 {
