--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<div class="cp_hmenuac06">
-	<span></span>
-	<span></span>
-	<span></span>
+<div class="contents">
+	<h1>Contents</h1>
+	<p>コンテンツ</p>
 </div>
+<div class="cp_fullscreenmenu">
+	<input class="toggle" type="checkbox" />
+	<div class="hamburger"><span></span></div>
+	<div class="menu">
+		<div>
                 <ul>
 		<li><a href="/index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="/sandbox.html">Sandbox</a></li>
 		<li><a href="/Thetamap">Theta</a></li>
 		</ul>
+		</div>
+	</div>
+</div>
 <style>
 .cp_hmenuac06 {
 	position: absolute;
