--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<li><a href="/index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="/sandbox.html">Sandbox</a></li>
-		<li><a href="/Thetamap">Theta</a></li>
+		<li><a href="/Thetamap/index.html">Theta</a></li>
 		</ul>
 		</div>
 	</div>
