--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<div class="contents">
-	<h1>Contents</h1>
-	<p>コンテンツ</p>
-</div>
 <div class="cp_fullscreenmenu">
 	<input class="toggle" type="checkbox" />
 	<div class="hamburger"><span></span></div>
@@ -11,7 +7,8 @@
 		<li><a href="/index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="/sandbox.html">Sandbox</a></li>
-		<li><a href="/Thetamap/index.html">Theta</a></li>
+		<li><a href="/thetamap/index.html">Theta</a></li>
+		<li><a href="/CVS/index.html">Convenience Store</a></li>
 		</ul>
 		</div>
 	</div>
