--- a/index.html
+++ b/index.html
@@ -1,207 +1,119 @@
-<div class="cp_fullscreenmenu">
-	<input class="toggle" type="checkbox" />
-	<div class="hamburger"><span></span></div>
-	<div class="menu">
-		<div>
-                <ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="/sandbox.html">Sandbox</a></li>
-		<li><a href="/thetamap/index.html">Theta</a></li>
-		<li><a href="/CVS/index.html">Convenience Store</a></li>
-		</ul>
-		</div>
-	</div>
-</div>
+<ul class="cp_sidebarmenu">
+<li><a href="/index.html"><i class="fa fa-home"></i><span>Home</span></a>
+</li>
+
+<li><a href="/sandbox/index.html"><i class="fa fa-file-text"></i><span>Sandbox</span></a>
+	<ul>
+		<li><a href="/sandbox/picture.html"><i class="fa fa-file-image-o"></i><span>Picture</span></a></li>
+	</ul>
+</li>
+
+	<li><a href="/about.html"><span>About</span></a>
+</li>
+
+<li><a href="/thetamap/index.html"><span>Theta</span></a>
+	<ul>
+		<li><a href="/thetamap/map.html"><span>Map</span></a></li>
+		<li><a href="/thetamap/story.html"><span>Story</span></a></li>
+		<li><a href="/thetamap/draw.html"><span>draw</span></a></li>
+	</ul>
+</li>
+</ul>
+<li><a href="/CVS/index.html">Convenience Store<span></span></a>
+<!--	<ul>
+		<li><a href="/CVS/.html"><span></span></a></li>
+		<li><a href="/CVS/.html"><span></span></a></li>
+		<li><a href="/CVS/.html"><span></span></a></li>
+	</ul>
+</li>
+</ul>-->
 <style>
-* {
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-}
-a,
-a:visited,
-a:hover,
-a:active {
-	text-decoration: none;
-	color: inherit;
-}
-.cp_fullscreenmenu {
-	position: fixed;
-	z-index: 1;
+.cp_sidebarmenu {
+	font-size: 0;
+	position: absolute;
+	z-index: 10;
 	top: 0;
 	left: 0;
-}
-/*menuコンテンツ*/
-.cp_fullscreenmenu .menu {
-	position: fixed;
-	top: 0;
-	left: 0;
-	display: flex;
-	visibility: hidden;
-	overflow: hidden;
-	width: 100%;
 	height: 100%;
-	pointer-events: none;
-	outline: 1px solid transparent;
-
-	-webkit-backface-visibility: hidden;
-	        backface-visibility: hidden;
-	align-items: center;
-	justify-content: center;
-}
-.cp_fullscreenmenu .menu > div {
-	display: flex;
-	overflow: hidden;
-	width: 200vw;
-	height: 200vw;
-	transition: all 0.4s ease;
-	-webkit-transform: scale(0);
-	        transform: scale(0);
+	padding: 0.4em 0;
 	text-align: center;
-	color: #fefefe;
-	border-radius: 50%;
-	background: rgba(0,131,143 ,0.8);
-
-	flex: none;
-	-webkit-backface-visibility: hidden;
-	        backface-visibility: hidden;
-	align-items: center;
-	justify-content: center;
+	color: white;
+	background: #37474f;
 }
-.cp_fullscreenmenu .menu > div > ul {
-	display: block;
-	max-height: 100vh;
-	margin: 0;
-	padding: 0 1em;
-	list-style: none;
-	transition: opacity 0.4s ease;
-	opacity: 0;
-}
-.cp_fullscreenmenu .menu > div > ul > li {
-	font-size: 24px;
-	display: block;
-	margin: 1em;
-	padding: 0;
-}
-.cp_fullscreenmenu .menu > div > ul > li > a {
+.cp_sidebarmenu li {
+	line-height: 100%;
 	position: relative;
-	display: inline;
-	cursor: pointer;
-	transition: color 0.4s ease;
+	display: inline-block;
+	list-style: none;
+	-webkit-transform: translateZ(0);
+					transform: translateZ(0);
+	vertical-align: middle;
+	pointer-events: none;
 }
-.cp_fullscreenmenu .menu > div > ul > li > a:hover {
-	color: #e5e5e5;
-}
-.cp_fullscreenmenu .menu > div > ul > li > a:hover:after {
-	width: 100%;
-}
-.cp_fullscreenmenu .menu > div > ul > li > a:after {
-	position: absolute;
-	z-index: 1;
-	bottom: -0.15em;
-	left: 0;
-	width: 0;
-	height: 2px;
-	content: '';
-	transition: width 0.4s ease;
-	background: #e5e5e5;
-}
-/*クリックしたらメニューが開閉の動作*/
-.cp_fullscreenmenu .toggle {
-	position: absolute;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	width: 60px;
-	height: 60px;
-	cursor: pointer;
-	opacity: 0;
-}
-.cp_fullscreenmenu .toggle:checked + .hamburger > span {
-	-webkit-transform: rotate(135deg);
-	        transform: rotate(135deg);
-}
-.cp_fullscreenmenu .toggle:checked + .hamburger > span:before,
-.cp_fullscreenmenu .toggle:checked + .hamburger > span:after {
-	top: 0;
-	-webkit-transform: rotate(90deg);
-	        transform: rotate(90deg);
-}
-.cp_fullscreenmenu .toggle:checked + .hamburger > span:after {
-	opacity: 0;
-}
-.cp_fullscreenmenu .toggle:checked ~ .menu {
-	visibility: visible;
+.cp_sidebarmenu a {
+	font-size: 16px;
+	line-height: 100%;
+	position: relative;
+	display: block;
+	min-width: 5em;
+	margin-bottom: 0.4em;
+	padding: 0.4em;
+	-webkit-transition: background 0.3s;
+					transition: background 0.3s;
+	text-decoration: none;
 	pointer-events: auto;
+	color: #ffffff;
 }
-.cp_fullscreenmenu .toggle:checked ~ .menu > div {
-	transition-duration: 0.75s;
-	-webkit-transform: scale(1);
-	        transform: scale(1);
+.cp_sidebarmenu a:active,
+.cp_sidebarmenu a:focus {
+	background: #0097a7;
 }
-.cp_fullscreenmenu .toggle:checked ~ .menu > div > ul {
+.cp_sidebarmenu i {
+	font-size: 2em;
+	display: block;
+	margin-bottom: 0.2em;
+}
+.cp_sidebarmenu span {
+	font-size: 0.625em;
+}
+.cp_sidebarmenu li:hover ul {
+	-webkit-transform: translateX(0);
+					transform: translateX(0);
+	background: #0097a7;
+}
+.cp_sidebarmenu > li {
+	display: block;
+}
+.cp_sidebarmenu > li > a {
+	background: #37474f;
+}
+.cp_sidebarmenu > li:hover {
+	z-index: 100;
+}
+.cp_sidebarmenu > li:hover a {
+	background: #0097a7;
+}
+.cp_sidebarmenu > li a:hover {
+	background: #00acc1;
+}
+.cp_sidebarmenu > li:hover a:after {
 	opacity: 1;
 }
-.cp_fullscreenmenu .toggle:checked ~ .menu > div > ul li:nth-of-type(1) {
-	transition-delay: 0.4s;
-}
-.cp_fullscreenmenu .toggle:checked ~ .menu > div > ul li:nth-of-type(2) {
-	transition-delay: 0.6s;
-}
-.cp_fullscreenmenu .toggle:checked ~ .menu > div > ul li:nth-of-type(3) {
-	transition-delay: 0.8s;
-}
-.cp_fullscreenmenu .toggle:checked ~ .menu > div > ul li:nth-of-type(4) {
-	transition-delay: 1.0s;
-}
-.cp_fullscreenmenu .toggle:hover + .hamburger {
-	box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.cp_fullscreenmenu .toggle:checked:hover + .hamburger > span {
-	-webkit-transform: rotate(225deg);
-	        transform: rotate(225deg);
-}
-/*ハンバーガー*/
-.cp_fullscreenmenu .hamburger {
+.cp_sidebarmenu > li ul {
 	position: absolute;
-	z-index: 1;
+	z-index: -1;
 	top: 0;
-	left: 0;
-	display: block;
-	width: 60px;
-	height: 60px;
-	padding: 0.5em 1em;
-	cursor: pointer;
-	transition: box-shadow 0.4s ease;
-	border-radius: 0 0.12em 0.12em 0;
-	background: rgba(0,151,167 ,0.7);
-
-	-webkit-backface-visibility: hidden;
-	        backface-visibility: hidden;
-}
-.cp_fullscreenmenu .hamburger > span {
-	position: relative;
-	top: 50%;
-	display: block;
-	width: 100%;
-	height: 2px;
-	transition: all 0.4s ease;
-	background: #fefefe;
-}
-.cp_fullscreenmenu .hamburger > span:before,
-.cp_fullscreenmenu .hamburger > span:after {
-	position: absolute;
-	z-index: 1;
-	top: -10px;
-	left: 0;
-	display: block;
-	width: 100%;
-	height: 2px;
-	content: '';
-	transition: all 0.4s ease;
-	background: inherit;
-}
-.cp_fullscreenmenu .hamburger > span:after {
-	top: 10px;
+	left: 100%;
+	width: auto;
+	height: 100%;
+	-webkit-transition: 0.5s -webkit-transform;
+					transition: 0.5s -webkit-transform;
+					transition: 0.5s transform;
+					transition: 0.5s transform, 0.5s -webkit-transform;
+	-webkit-transform: translateX(-100%);
+					transform: translateX(-100%);
+	white-space: nowrap;
+	background: #0097a7;
+	padding: 0;
 }
 </style>
