--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<li><a id="home" href="/index.html">Home</a></li>
 	<li><a id="about" href="/about.html">About</a></li>
 	<li><a id="sandbox" href="/sandbox.html">Sandbox</a></li>
-  <li><a id="Theta" href="/thetamap/index.html">Theta</a></li>
+        <li><a id="Theta" href="/thetamap/index.html">Theta</a></li>
+	<li><a id="Convenience Store" href="/CVS/index.html">Conveni</a></li>
 </ul>
 
 </label>
@@ -44,7 +45,7 @@
 	height: 5px;
 	margin-top: 3px;
 	border-radius: 2px;
-	background-color: #ffffff;
+	background-color: navy;
 }
 .menu ul {
 	display: none;
@@ -71,7 +72,7 @@
 	line-height: 2em;
 }
 .menu ul li a:hover {
-	color: #ffffff;
+	color: navy;
 	background-color: #1b2538;
 }
 .menu ul li a:target {
@@ -96,4 +97,4 @@
 	display: none;
 }
 -->
-</styl
+</style>
