--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	        transition: all 0.5s ease-in-out;
 	border: 3px solid transparent;
 	border-radius: 50%;
-	background-color: #1b2538;
+	background-color: navy;
 }
 .menu div.menubar {
 	width: 30px;
@@ -45,7 +45,7 @@
 	height: 5px;
 	margin-top: 3px;
 	border-radius: 2px;
-	background-color: navy;
+	background-color: #ffffff;
 }
 .menu ul {
 	display: none;
@@ -66,17 +66,17 @@
 	-webkit-transition: all 0.3s ease-in;
 	        transition: all 0.3s ease-in;
 	text-decoration: none;
-	color: #1b2538;
+	color: navy;
 	border-bottom: 4px solid transparent;
 	height: 56px;
 	line-height: 2em;
 }
 .menu ul li a:hover {
-	color: navy;
-	background-color: #1b2538;
+	color: #ffffff;
+	background-color: navy;
 }
 .menu ul li a:target {
-	border-bottom-color: #1b2538;
+	border-bottom-color: navy;
 }
 /* クリックした時の動き */
 #cp_navimenuid {
@@ -85,7 +85,7 @@
 #cp_navimenuid:checked ~ .menu {
 	width: 100%;
 	height: 60px;
-	border: 3px solid #1b2538;
+	border: 3px solid navy;
 	border-radius: 5px;
 	background-color: transparent;
 }
