--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </label>
 <style type="text/css">
 <!--
+html body {
+	font-family: Arial,Helvetica,sans-serif;
+	font-size: 12px;
+}
   *, *:before, *:after {
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
