--- a/thetamap/index.html
+++ b/thetamap/index.html
@@ -36,7 +36,8 @@ li a:hover:not(.active) {
 	<li><a href="/thetamap/map.html">地図の閲覧</a></li>
 	<li><a href="/thetamap/story.html">世界観や物語</a></li>
 	<li><a href="/thetamap/drow.html">地図の制作</a></li>
-	<li><a href="/thetamap/about.html">作者について</a></li>
+	<li><a href="https://koyomi.f5.si/about.html">作者について</a></li>
+	<li><a href="https://koyomi.f5.si/about.html"></a></li>
 </ul>
 <link rel="icon" href="7A061703-BC1B-4D59-AB10-203B56176D4E.png" />
 <link rel="apple-touch-icon" sizes="180x180" href="7A061703-BC1B-4D59-AB10-203B56176D4E.png">
