--- a/CVS/index.html
+++ b/CVS/index.html
@@ -1,2 +1,3 @@
 <center><span style="font-size: 200%;">マイナーコンビニの店舗一覧</span></center><br>
 ここでは、Koyomiya5438(コヨミヤ)が独自に調査したマイナーコンビニの一覧をまとめます。<br>
+<a href="/sunvoluntary.html">サンボランタリー 店舗一覧</a>・・・最終更新 2021/6/12
