--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -3,7 +3,7 @@
 △サンボランタリー林店 青森県つがる市木造大畑朽葉213<br>
 ?サンボランタリー福富店 青森県つがる市稲垣町福富笹崎6<br>
 ? サンボランタリー富萢店 青森県つがる市富萢町屏風山1-782<br>
-△サンボランタリー牛潟店 青森県つがる市牛潟町鷲野沢29-344<br>
+△サンボランタリー牛潟店 青森県つがる市牛潟町鷲野沢29-137付近<br>
 ○サンボランタリーコンノ青山店 青森県弘前市青山1丁目19-5<br>
 △サンボランタリー弘前大森店 青森県弘前市大森勝山278-3<br>
 △サンボランタリー十腰内店 青森県弘前市大字十腰内字野中322<span style="color:red;">*¹</span><br>
