--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -7,6 +7,7 @@
 ○サンボランタリーコンノ青山店 青森県弘前市青山1丁目19-5<br>
 △サンボランタリー弘前大森店 青森県弘前市大森勝山278-3<br>
 △サンボランタリー十腰内店 青森県弘前市大字十腰内字野中322<span style="color:red;">*¹</span><br>
+△サンボランタリー国吉店 青森県弘前市国吉耕田20<span style="color:red;">*2</span><br>
 △サンボランタリーサン・ドラッグ店 青森県弘前市撫牛子3丁目4-1<br>
 ×サンボランタリー五林平店 青森県北津軽郡板柳町大字五林平字前橋4<br>
 △サンボランタリー薄市店 青森県北津軽郡中泊町薄市沖原117<br>
@@ -27,4 +28,8 @@
 ×サンボランタリー西山崎店 香川県高松市西山崎町400-1<br>
 ?サンボランタリー牟礼店 香川県高松市牟礼町大町1576-1<br>
 
+
+  
+  
 <span style="color:red;">*¹</span>...ドアの所にサンボランタリーのロゴがある
+<span style="color:red;">*2</span>...それらしき建物がある
