--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -9,7 +9,7 @@
 △サンボランタリー十腰内店 青森県弘前市大字十腰内字野中322<span style="color:red;">*¹</span><br>
 △サンボランタリー国吉店 青森県弘前市国吉耕田20<span style="color:red;">*²</span><br>
 △サンボランタリーサン・ドラッグ店 青森県弘前市撫牛子3丁目4-1<br>
-×サンボランタリー五林平店 青森県北津軽郡板柳町大字五林平字前橋4<br>
+△サンボランタリー五林平店 青森県北津軽郡板柳町大字五林平字前橋4-2<br>
 △サンボランタリー薄市店 青森県北津軽郡中泊町薄市沖原117<br>
 ×サンボランタリー武田店 青森県北津軽郡中泊町富野千歳151-4<br>
 □サンボランタリー平井町店 青森県五所川原市中平井24<br>
