--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -23,6 +23,7 @@
 △サンボランタリー武川店 山梨県北杜市武川町柳澤675<br>
 ×サンボランタリー長坂店 山梨県北杜市長坂町大井ヶ森508<br>
 △サンボランタリー双葉店 山梨県甲斐市大垈2722<br>
+△サンボランタリー豊富店 山梨県中央市関原
 <香川県><br>
 △サンボランタリー津田店 香川県さぬき市津田町津田77-1<br>
 ×サンボランタリー西山崎店 香川県高松市西山崎町400-1<br>
