--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -28,7 +28,7 @@
 △サンボランタリー津田店 香川県さぬき市津田町津田77-1<br>
 ×サンボランタリー西山崎店 香川県高松市西山崎町400-1<br>
 ×サンボランタリー庵治店 香川県高松市庵治町6392番地48<br>
-?サンボランタリー牟礼店 香川県高松市牟礼町大町1576-1<br>
+○サンボランタリー牟礼店 香川県高松市牟礼町大町1576-1<br>
 ○サンボランタリー池戸店 香川県木田郡三木町池戸3299<br>
 <br>
 <br>
