--- a/thetamap/index.html
+++ b/thetamap/index.html
@@ -1,4 +1,4 @@
-<title>空想地図・テータ</title>
+<title>空想世界・テータ</title>
 <head>
 <meta name="Content-Style-Type" content="text/css">
 <style>
@@ -35,10 +35,10 @@ li a:hover:not(.active) {
 	<li><a class="active" href="/thetamap/index.html">ホーム</a></li>
 	<li><a href="/thetamap/map.html">地図の閲覧</a></li>
 	<li><a href="/thetamap/story.html">世界観や物語</a></li>
-	<li><a href="/thetamap/drow.html">地図の制作</a></li>
+	<li><a href="/thetamap/draw.html">地図の制作</a></li>
 	<li><a href="https://koyomi.f5.si/about.html">作者について</a></li>
 	<li><a href="https://koyomi.f5.si/about.html"></a></li>
 </ul>
 <link rel="icon" href="7A061703-BC1B-4D59-AB10-203B56176D4E.png" />
 <link rel="apple-touch-icon" sizes="180x180" href="7A061703-BC1B-4D59-AB10-203B56176D4E.png">
-<div style="text-align: center"><img src="thetaheader.JPG" title="空想地図・テータ" width="480" height="160"><br><span style="text-shadow:3px 3px 3px #d0d0d0"><span style="font-family: 'Lucida Handwriting', cursive;"><span style="font-size:300%"><span style="color:teal">空想地図</span><span style="color:navy">・</span><span style="color:darkgreen">テータ</div></span></span></span></span>
+<div style="text-align: center"><img src="thetaheader.JPG" title="空想世界・テータ" width="480" height="160"><br><span style="text-shadow:3px 3px 3px #d0d0d0"><span style="font-family: 'Lucida Handwriting', cursive;"><span style="font-size:300%"><span style="color:teal">空想地図</span><span style="color:navy">・</span><span style="color:darkgreen">テータ</div></span></span></span></span>
