--- a/CVS/bonmart.html
+++ b/CVS/bonmart.html
@@ -1,19 +1,5 @@
-ボンマート　ルンビニ（ボンマートチエーン協同組合）　東京都板橋区氷川町３１−１
-
-ボンマート クギヤ　　　　東京都板橋区若木1-7-7
-
-ボンマート 大丸屋　　　　東京都豊島区池袋本町3-28-6
-
-ボンマート 野崎屋　　　　東京都板橋区仲宿１３−１３
-
-ボンマート 十一屋　　　　東京都板橋区東新町１丁目３８−１５
-
-
-
-↓関係ない可能性
-
-ボンマート　はやさか　宮城県富谷市あけの平2-24-1
-
-ボンマート　まるみつ　宮城県刈田郡蔵王町宮町５
-
-ボンマート　　　　　　埼玉県深谷市上野台３１８０
+△ボンマート　ルンビニ 東京都板橋区氷川町31-1<br>
+□ボンマート クギヤ 東京都板橋区若木1-7-7<br>
+□ボンマート 大丸屋 東京都豊島区池袋本町3-28-6<br>
+×ボンマート 野崎屋 東京都板橋区仲宿13-13<br>
+△ボンマート 十一屋　東京都板橋区東新町1丁目38-15<br>
