--- a/CVS/bonmart.html
+++ b/CVS/bonmart.html
@@ -1,3 +1,4 @@
+<span style="font-size: 200%;">ボンマート一覧</span>
 △ボンマート　ルンビニ 東京都板橋区氷川町31-1<br>
 □ボンマート クギヤ 東京都板橋区若木1-7-7<br>
 □ボンマート 大丸屋 東京都豊島区池袋本町3-28-6<br>
