--- a/conveni/index.html
+++ b/conveni/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
     <head>
-        <title>空想世界・テータ</title>
+        <title>マイナーコンビニの店舗一覧</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="./style.css">
         <meta http-equiv="Pragma" content="no-cache">
