--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<li><a id="about" href="/about.html">About</a></li>
 	<li><a id="sandbox" href="/sandbox.html">Sandbox</a></li>
         <li><a id="Theta" href="/thetamap/index.html">Theta</a></li>
-	<li><a id="Convenience Store" href="/CVS/index.html">Conveni</a></li>
+	<li><a id="Convenience Store" href="/conveni/index.html">Conveni</a></li>
 </ul>
 
 </label>
