--- a/CVS/sunvoluntary.html
+++ b/CVS/sunvoluntary.html
@@ -20,8 +20,9 @@
 ×サンボランタリー久里浜駅前店 神奈川県横須賀市久里浜1丁目1-7<br>
 
 <山梨県><br>
-△サンボランタリー武川店 山梨県北杜市武川町柳澤675<br>
+?サンボランタリー武川店 山梨県北杜市武川町柳澤675<br>
 ×サンボランタリー長坂店 山梨県北杜市長坂町大井ヶ森508<br>
+?サンボランタリー高根店 山梨県北杜市高根町村山西割986<br>
 △サンボランタリー双葉店 山梨県甲斐市大垈2722<br>
 △サンボランタリー豊富店 山梨県中央市関原851<br>
 <香川県><br>
