--- a/conveni/index.html
+++ b/conveni/index.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <nav id="nav-pc">
             <div style="height: 10px;"></div>
             <div class="nav-menu"></div>
