--- a/404.html
+++ b/404.html
@@ -96,7 +96,7 @@ svg {
 </svg>
 <div class="message-box">
   <h1>404</h1>
-  <p>ページが見つかりませんんでした。</p>
+  <p>ページが見つかりませんでした。</p>
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a onclick="history.back(-1)" class="link-button link-back-button">前のページに戻る</a>
