--- a/sandbox/window.html
+++ b/sandbox/window.html
@@ -1,25 +1,43 @@
+                  .=uuuuuuuuuuuuu26,
 
+                .=.qmmmmmmmmmmmmmmh,5,
 
-                  .=uuuuuuuuuuuuu26,<br>
-                .=.qmmmmmmmmmmmmmmh,5,<br>
-              .=.mmmmmmmmmmmmmmmmmmmh,4,<br>
-             v.mmmmmmmmmmmmmmmmmmmmmmmN,{<br>
-             >dmmmmmK(JJJJJJJJJJ/qmmmmg;{<br>
-             >dmmmmmbj          rqmmmmg;{<br>
-             >?"""""=j         .rqmmmmg;{<br>
-                      ((((((((((\qmmmmg;{<br>
-                      k,mgmmmmgggmmgmY+v`<br>
-.gg,  (g,(g,  +g,+gg   .gg(ggggggJ.ggggggx+gggg&,<br>
-J###m.dNFd#]  WN]M#Nb .N#N+NM...M#5#Nmaae!W#F:_d#F<br>
-J#@,HNM#Fd#h..M#\M#MNmNM##+#M777M#p##@""" W##M#M"`<br>
-JM8  ?MMF 7HMMB^ MM\TMB(MM?MMMMMH9!MMMMMMFTM% 7MM,<br>
-                      k,mmgmmgmmgmmmH&?i.<br>
-                  ....TCCCCCCCCu;qmmmqm({<br>
-             >.(((((,j         .rqmmmmm({<br>
-             >(mmmmmPj         .rqmmmmm({<br>
-             >(mmmmmb?777777777Tiqmmmmm({<br>
-             1(mmmmmmmmmmmmmmmmmmmmmmmH(:<br>
-              ?,TmmmmmmmmmmmmmmmmmmmH=,!<br>
-                ~,4mmmmmmmmmmmmmmm#=,`<br>
-                  1,=============i/`<br>
+              .=.mmmmmmmmmmmmmmmmmmmh,4,
 
+             v.mmmmmmmmmmmmmmmmmmmmmmmN,{
+
+             >dmmmmmK(JJJJJJJJJJ/qmmmmg;{
+
+             >dmmmmmbj          rqmmmmg;{
+
+             >?"""""=j         .rqmmmmg;{
+
+                      ((((((((((\qmmmmg;{
+
+                      k,mgmmmmgggmmgmY+v`
+
+.gg,  (g,(g,  +g,+gg   .gg(ggggggJ.ggggggx+gggg&,
+
+J###m.dNFd#]  WN]M#Nb .N#N+NM...M#5#Nmaae!W#F:_d#F
+
+J#@,HNM#Fd#h..M#\M#MNmNM##+#M777M#p##@""" W##M#M"`
+
+JM8  ?MMF 7HMMB^ MM\TMB(MM?MMMMMH9!MMMMMMFTM% 7MM,
+
+                      k,mmgmmgmmgmmmH&?i.
+
+                  ....TCCCCCCCCu;qmmmqm({
+
+             >.(((((,j         .rqmmmmm({
+
+             >(mmmmmPj         .rqmmmmm({
+
+             >(mmmmmb?777777777Tiqmmmmm({
+
+             1(mmmmmmmmmmmmmmmmmmmmmmmH(:
+
+              ?,TmmmmmmmmmmmmmmmmmmmH=,!
+
+                ~,4mmmmmmmmmmmmmmm#=,`
+
+                  1,=============i/`
