--- a/conv/index.html
+++ b/conv/index.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </body>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
     <script src="./script.js"></script>
 </html>
