--- a/conv/index.html
+++ b/conv/index.html
@@ -2,7 +2,7 @@
 <html lang="jp">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="./light-theme.css">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Cache-Control" content="no-cache">
         <meta http-equiv="Expires" content="0">
