--- a/conv/index.html
+++ b/conv/index.html
@@ -13,7 +13,7 @@
 
 <p>
 お手数をおかけしますが、ブックマークの変更をお願いします。
-なお、このページは、3秒後に新しいホームページに自動転送されます。
+なお、このページは、3秒後に新しいホームページに自動転送されます。転送されない場合は<a href="https://koyomiya.f5.si/conveni/">こちら</a>をクリックしてください。
 </p>
 
 </body>
