--- a/conveni/index.html
+++ b/conveni/index.html
@@ -25,6 +25,9 @@
             <ul id="contents-list">
             </ul>
         </div>
+<!-- admax -->
+<script src="https://adm.shinobi.jp/s/36e63b043736d4b18d432734f83cc907"></script>
+<!-- admax -->
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
