--- a/conv/index.html
+++ b/conv/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 <title>転送</title>
-<meta http-equiv="refresh" content="3;url=https://koyomiya.f5.si/conveni/">
+<meta http-equiv="refresh" content="3;url=https://koyomi-ya.net/conveni/">
 </head>
 
 <body>
 
 <p>このホームページは移転しました。</p>
-<p>新しいホームページは、<a href="https://koyomiya.f5.si/conveni/">https://koyomiya.f5.si/conveni/</a>になります。
+<p>新しいホームページは、<a href="https://koyomi-ya.net/conveni/">https://koyomi-ya.net/conveni/</a>になります。
 </p>
 
 <p>
 お手数をおかけしますが、ブックマークの変更をお願いします。
-なお、このページは、3秒後に新しいホームページに自動転送されます。転送されない場合は<a href="https://koyomiya.f5.si/conveni/">こちら</a>をクリックしてください。
+なお、このページは、3秒後に新しいホームページに自動転送されます。転送されない場合は<a href="https://koyomi-ya.net/conveni/">こちら</a>をクリックしてください。
 </p>
 
 </body>
