--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@ svg {
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a onclick="history.back(-1)" class="link-button link-back-button">前のページに戻る</a>
-      <a href="https://koyomiya.f5.si/" class="link-button">トップページへ戻る</a>
+      <a href="https://koymi.net/" class="link-button">トップページへ戻る</a>
     </div>
   </div>
 </div>
