--- a/CVS/townshop.html
+++ b/CVS/townshop.html
@@ -3,10 +3,13 @@
 ○タウンショップまつや 東京都板橋区小茂根4丁目12-21
 ○タウンショップあさひや 東京都豊島区南長崎3丁目8-13
 ○タウンショップいせきん 東京都荒川区南千住3丁目33-10
+○タウンショップますや 東京都荒川区荒川3丁目61-6
+○タウンショップさとう 東京都目黒区中央町１丁目３−７
 ×タウンショップたけやま 東京都渋谷区神宮前3丁目25-8
 
 <神奈川県>
 □タウンショップいけや 神奈川県横浜市戸塚区川上町557-8
+△タウンショップフジヤ 神奈川県横浜市南区浦舟町5丁目77-22
 ×タウンショップいしだ 神奈川県相模原市中央区中央1丁目8-23
 □タウンショップおきつ 神奈川県横須賀市汐入町3-13
 ○タウンショップあらかわ 神奈川県鎌倉市十二所97-1
@@ -15,8 +18,11 @@
 
 <埼玉県>
 △タウンショップしんどう 埼玉県さいたま市大宮区天沼町1-614
+△タウンショップとみた 埼玉県さいたま市岩槻区飯塚1157
 △タウンショップまるきや 埼玉県春日部市大畑156-5
+△タウンショップさかぐち 埼玉県蓮田市藤ノ木1丁目26
 □タウンショップマツザキ 埼玉県越谷市下間久里893-3
+○タウンショップかとう 埼玉県北足立郡伊奈町寿2丁目402
   
 <千葉県>
 ○タウンショップなかむら 千葉県八千代市米本2207-10
