--- a/CVS/townshop.html
+++ b/CVS/townshop.html
@@ -11,6 +11,7 @@
 □タウンショップいけや 神奈川県横浜市戸塚区川上町557-8
 △タウンショップフジヤ 神奈川県横浜市南区浦舟町5丁目77-22
 ×タウンショップいしだ 神奈川県相模原市中央区中央1丁目8-23
+△店名不明 神奈川県相模原市緑区小渕1990-1
 □タウンショップおきつ 神奈川県横須賀市汐入町3-13
 ○タウンショップあらかわ 神奈川県鎌倉市十二所97-1
 □タウンショップさんこう 神奈川県平塚市中原3丁目4-1
